jetty-9: Added -XX:+PrintGCDetails to the Maven Surefire Plugin.